Bug 400805 - no support for selecting enum literals in entity attributes available
Summary: no support for selecting enum literals in entity attributes available
Status: RESOLVED FIXED
Alias: None
Product: umbrello
Classification: Applications
Component: general (other bugs)
Version First Reported In: 2.26.2 (KDE Applications 18.08.2)
Platform: Other All
: NOR normal
Target Milestone: ---
Assignee: Umbrello Development Group
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2018-11-07 16:21 UTC by Ralf Habacker
Modified: 2018-11-08 17:01 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 2.26.80 (KDE Applications 18.11.80)
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Ralf Habacker 2018-11-07 16:21:56 UTC
Entity attributes can have a default value, which is currently entered into a simple edit field in the related property dialog. This works for simple types but not for enum types, where a list box or combobox showing the available literals would be much better.


STEPS TO REPRODUCE
1. start umbrello
2. create a new enum name 'new_enum' with some literals
3. Add an entity diagram
4. Add an entity 
5. Add an entity attribute
6. Open property dialog for entity attribute
7. enter 'new_enum' as type
8. try to select an enum literal from new_enum 

OBSERVED RESULT
You need to close the property dialog, search for the enum in the tree view and inspect a look at the literals.

EXPECTED RESULT
For enum types the default value parameter for entity attributes should have a list with enum literals in the property dialogs
Comment 1 Ralf Habacker 2018-11-08 14:20:01 UTC
Git commit cbe838228a5615354b40e84985df49d80991f12f by Ralf Habacker.
Committed on 08/11/2018 at 13:18.
Pushed by habacker into branch 'master'.

Add widget for choosing default values

The input field has a different structure depending on the UML
object type. In case the type is UMLEnum a list box with the
available entries is used, otherwise a simple input field.
FIXED-IN:2.26.80 (KDE Applications 18.11.80)

M  +1    -0    umbrello/CMakeLists.txt
M  +8    -7    umbrello/dialogs/parameterpropertiesdialog.cpp
M  +4    -2    umbrello/dialogs/parameterpropertiesdialog.h
M  +5    -6    umbrello/dialogs/umlentityattributedialog.cpp
M  +2    -0    umbrello/dialogs/umlentityattributedialog.h
A  +191  -0    umbrello/dialogs/widgets/defaultvaluewidget.cpp     [License: GPL (v2+)]
A  +54   -0    umbrello/dialogs/widgets/defaultvaluewidget.h     [License: GPL (v2+)]
M  +1    -0    umbrello/dialogs/widgets/umldatatypewidget.cpp
M  +4    -0    umbrello/dialogs/widgets/umldatatypewidget.h

https://commits.kde.org/umbrello/cbe838228a5615354b40e84985df49d80991f12f
Comment 2 Ralf Habacker 2018-11-08 17:01:29 UTC
Git commit 47e2fce438a0abe9728694c9059a7b827de67800 by Ralf Habacker.
Committed on 08/11/2018 at 17:01.
Pushed by habacker into branch 'master'.

Do not limit size of entity attribute dialog

The setting limited the vertical height of the
widget to the default value for smaller screens.

Fixup of commit cbe838228

M  +0    -2    umbrello/dialogs/parameterpropertiesdialog.cpp

https://commits.kde.org/umbrello/47e2fce438a0abe9728694c9059a7b827de67800