Add widget for choosing default values

The input field has a different structure depending on the UML
object type. In case the type is UMLEnum a list box with the
available entries is used, otherwise a simple input field.

BUG:400805
FIXED-IN:2.26.80 (KDE Applications 18.11.80)